minor changes + code to sample multiple mappings

--- a/.gitignore
+++ b/.gitignore
@@ -137,9 +137,8 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-.vscode/
-
-.idea/
 /notebooks/.ipynb_checkpoints/
 
 **/__pycache__/
+discarded/
+
