dataset/datasampler/dataloader ready lost train_single_simple.py file by mistake

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,8 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}",
                 "PYTHONIOENCODING": "utf-8"
-            }
+            },
+            "justMyCode": false
         },
         {
             "name": "Python: Attach",
@@ -59,14 +60,6 @@
                 "128"
             ],
             "console": "integratedTerminal",
-        },
-        {
-            "name": "Python: Current File",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            // "cwd": "${workspaceFolder}"
         }
     ]
 }
