added new technique of numbering routers in th NoC to realise performance gains

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.pythonPath": "/usr/bin/python3",
     "files.watcherExclude": {
         "**/venv_mtp/**": true
-    }
+    },
+    "jupyter.jupyterServerType": "local"
 }
