added stochastic beam search for sampling mappings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,6 +30,12 @@
             "module": "utils.utils"
         },
         {
+            "name": "Python: Module seqToseq",
+            "type": "python",
+            "request": "launch",
+            "module": "models.seqToseq"
+        },
+        {
             "name": "Python: Attach",
             "type": "python",
             "request": "attach",
